# meta-pytorch-hackathon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml
hack_meta/: .dockerignore  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
hack_meta/openenv_hack_meta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
hack_meta/server/: Dockerfile  __init__.py  app.py  hack_meta_environment.py  scene_catalog.py
server/: __init__.py  app.py  hack_meta_environment.py
