[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "disaster_response"
version = "0.1.0"
description = "OpenEnv disaster response coordination environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "python-dotenv>=1.2.2",
    "openai>=1.0.0",
]

[project.scripts]
server = "disaster_response.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["disaster_response", "disaster_response.server"]
package-dir = { "disaster_response" = ".", "disaster_response.server" = "server" }
